; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_async.c_close_thread.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_async.c_close_thread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [6 x i8] c"close\00", align 1
@EBADF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @close_thread to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @close_thread(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = call i32 (...) @pthread_self()
  %4 = call i32 @pthread_setname_np(i32 %3, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  %5 = load i8*, i8** %2, align 8
  %6 = call i32 @PTR_TO_FD(i8* %5)
  %7 = call i32 @close_nointr(i32 %6)
  %8 = load i32, i32* @EBADF, align 4
  %9 = sub nsw i32 0, %8
  %10 = icmp ne i32 %7, %9
  %11 = zext i1 %10 to i32
  %12 = call i32 @assert_se(i32 %11)
  ret i8* null
}

declare dso_local i32 @pthread_setname_np(i32, i8*) #1

declare dso_local i32 @pthread_self(...) #1

declare dso_local i32 @assert_se(i32) #1

declare dso_local i32 @close_nointr(i32) #1

declare dso_local i32 @PTR_TO_FD(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
